# adaptive-marketing-ai

./: README.md  architecture-mermaid.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/apis/: chat_route.py  customer_route.py  integration_route.py  routes.py
backend/core/: database_schema_prompt.py  llm_handler.py  prompt_hanlder.py  settings.py  utils.py
backend/data/: crm_customers.json  shopify_customers.json  website_customers.json
backend/models/: __init__.py  models.py  schemas.py
backend/repositories/: chat_repository.py  customer_repository.py  integration_repository.py
backend/services/: chat_service.py  customer_sync_service.py  data_sources_service.py  integration_service.py  stream_service.py
backend/services/agents/: __init__.py  business_analyst_agent.py  manager_agent.py  marketing_agent.py  orchestrator_service.py  paraphrase_agent.py  query_generator_agent.py  validator_agent.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  index.css  types.ts
frontend/src/components/: ChannelMessages.tsx  Chat.tsx  ConnectModal.tsx  SourceCards.tsx
frontend/src/services/: api.ts
